# LMS

./: docker-compose.yml
.github/ISSUE_TEMPLATE/: task.md
backend/: Cargo.toml
backend/entity/: Cargo.toml
backend/migration/: Cargo.toml
diagrams/: db.dbml
frontend/: package-lock.json
