
# Workspace members
[workspace]
members = [".", "entity", "migration"]

# Workspace package preferences
[workspace.package]
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/LMS"

# Workspace dependencies
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4", features = ["serde"] }

[workspace.dependencies.sea-orm]
version = "0.12"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
]

# Server package preferences
[package]
name = "backend"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true


# Server dependencies
[dependencies]
dotenvy = "0.15"
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
validator = { version = "0.16", features = ["derive"] }

axum = { version = "0.6", features = ["headers", "http2"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["full"] }

sailfish = "0.8"
lettre = "0.11"

log.workspace = true
chrono.workspace = true
serde.workspace = true
sea-orm.workspace = true

log-panics = { version = "2", features = ["with-backtrace"] }

thiserror = "1"
email_address = "0.2"
