[package]
name = "migration"
version = "0.1.0"
publish = false
edition.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "^0.12"
features = ["sqlx-postgres", "runtime-tokio-rustls"]
